--- a/config.json
+++ b/config.json
@@ -14,16 +14,16 @@
     "train_loader": {
         "type": "VOC",
         "args":{
-            "data_dir": "/home/yassine/Downloads/VOCtrainval_11-May-2012",
-            "batch_size": 2,
-            "crop_size": 100,
-            "shuffle": true,
-            "base_size": 520,
-            "scale": true,
+            "data_dir": "data/VOCtrainval_11-May-2012",
+            "batch_size": 8,
+            "base_size": 400,
+            "crop_size": 380,
             "augment": true,
+            "shuffle": true,
+            "scale": true,
             "flip": true,
             "rotate": true,
-            "blur": true,
+            "blur": false,
             "split": "train_aug",
             "num_workers": 8
         }
@@ -32,20 +32,11 @@
     "val_loader": {
         "type": "VOC",
         "args":{
-            "data_dir": "/home/yassine/Downloads/VOCtrainval_11-May-2012",
-            "batch_size": 1,
+            "data_dir": "data/VOCtrainval_11-May-2012",
+            "batch_size": 8,
             "crop_size": 480,
             "val": true,
             "split": "val",
-            "num_workers": 4
-        }
-    },
-
-    "test_loader": {
-        "type": "VOC",
-        "args":{
-            "data_dir": "/home/yassine/Downloads/VOCtrainval_11-May-2012",
-            "crop_size": 480,
             "num_workers": 4
         }
     },
@@ -60,7 +51,6 @@
         }
     },
 
-
     "loss": "CrossEntropyLoss2d",
     "ignore_index": 255,
     "lr_scheduler": {
@@ -68,11 +58,10 @@
         "args": {}
     },
 
-
     "trainer": {
         "epochs": 80,
         "save_dir": "saved/",
-        "save_period": 50,
+        "save_period": 10,
   
         "monitor": "max Mean_IoU",
         "early_stop": 10,
