--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "name": "PSPNet",
     "n_gpu": 1,
-    
+    "use_synch_bn": true,
+
     "arch": {
         "type": "PSPNet",
         "args": {
