--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "name": "PSPNet",
     "n_gpu": 1,
-    "use_synch_bn": true,
+    "use_synch_bn": false,
 
     "arch": {
         "type": "PSPNet",
